@@ -5,6 +5,11 @@ CHANGES
 Version 0.5.1dev (unreleased)
 -----------------------------
 
+- Bad typo in columns.py: Renamed ``getLinkConent`` to ``getLinkContent``
+
+- Bug: Changed return string in getLinkCSS. It was using css="" instead of
+  class="" for CSS classes. Thanks to Dan for reporting this bugs.
+
 - Implemented SelectedItemColumn
 
 - Fix CheckBoxColumn, use always the correct selectedItems. Use always real
@@ -12,6 +17,7 @@ Version 0.5.1dev (unreleased)
 
 - Fix RadioColumn, use always the correct selectedItem from the selectedItems 
   list. Use always the first selectedItems form the tables selectedItems
+
 
 Version 0.5.0 (2008-04-13)
 --------------------------
